feat(argocd-image-updater): Allow defining extraEnvFrom for the deployment
Signed-off-by: bakito <github@bakito.ch>

--- a/charts/argocd-image-updater/Chart.yaml
+++ b/charts/argocd-image-updater/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: argocd-image-updater
 description: A Helm chart for Argo CD Image Updater, a tool to automatically update the container images of Kubernetes workloads which are managed by Argo CD
 type: application
-version: 0.9.6
+version: 0.9.7
 appVersion: v0.12.2
 home: https://github.com/argoproj-labs/argocd-image-updater
 icon: https://argocd-image-updater.readthedocs.io/en/stable/assets/logo.png
@@ -18,9 +18,5 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
-    - kind: fixed
-      description: Properly quoting the config map values
-    - kind: fixed
-      description: Only adding a data field to argocd-image-updater-ssh-config when there's data to be added
-    - kind: changed
-      description: Only include config.argocd if config.applicationsAPIKind is set to 'argocd'
+    - kind: added
+      description: Allow defining extraEnvFrom for the deployment
