feat(argocd-apps): allow plugin config in applicationsets
This change enables configuration of configuration management plugins
(cmp) in an ApplicationSet template.

Signed-off-by: Andrew Gershman <andrew@cndr.io>

--- a/charts/argocd-apps/templates/applicationsets.yaml
+++ b/charts/argocd-apps/templates/applicationsets.yaml
@@ -67,6 +67,10 @@ spec:
       sources:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .plugin }}
+      plugin:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       destination:
         {{- toYaml .destination | nindent 8 }}
       {{- with .syncPolicy }}
