--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -275,9 +275,8 @@ configs:
     # -- JQ Path expression timeout
     ## By default, the evaluation of a JQPathExpression is limited to one second.
     ## If you encounter a "JQ patch execution timed out" error message due to a complex JQPathExpression
-    ## that requires more time to evaluate, you can extend the timeout period by configuring the `ignore.normalizer.jq.timeout`
-    ## setting within the `argocd-cmd-params-cm` ConfigMap.
-    controller.ignore.normalizer.jq.timeout: "5s"
+    ## that requires more time to evaluate, you can extend the timeout period.
+    controller.ignore.normalizer.jq.timeout: "1s"
 
   # Argo CD RBAC policy configuration
   ## Ref: https://github.com/argoproj/argo-cd/blob/master/docs/operator-manual/rbac.md
