--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -53,7 +53,7 @@ controller:
   deploymentLabels: {}
   # -- Annotations to be added to application controller pods
   podAnnotations: {}
-  # Labels to be added to the application controller pods
+  # -- Labels to be added to the application controller pods
   podLabels: {}
   # -- [Node selector]
   nodeSelector: {}
@@ -297,7 +297,7 @@ dashboard:
   deploymentLabels: {}
   # -- Annotations to be added to application dashboard pods
   podAnnotations: {}
-  # Labels to be added to the application dashboard pods
+  # -- Labels to be added to the application dashboard pods
   podLabels: {}
   # -- [Node selector]
   nodeSelector: {}
