--- a/charts/argo-cd/templates/redis/health-configmap.yaml
+++ b/charts/argo-cd/templates/redis/health-configmap.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "argo-cd.redis.fullname" . }}-health-configmap
-  namespace: {{ .Release.Namespace | quote }}
+  namespace: {{ include "argo-events.namespace" . | quote }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.redis.name "name" .Values.redis.name) | nindent 4 }}
 data:
