--- a/charts/argocd-image-updater/values.yaml
+++ b/charts/argocd-image-updater/values.yaml
@@ -205,6 +205,7 @@ podSecurityContext: {}
   # fsGroup: 2000
 
 # -- Security context settings for the deployment
+# @default -- See [values.yaml]
 securityContext:
   allowPrivilegeEscalation: false
   capabilities:
