fix(argo-workflows): Add missing serviceLabels to server service
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/templates/server/server-service.yaml
+++ b/charts/argo-workflows/templates/server/server-service.yaml
@@ -7,6 +7,9 @@ metadata:
   labels:
     {{- include "argo-workflows.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}
     app.kubernetes.io/version: {{ include "argo-workflows.server_chart_version_label" . }}
+    {{- with .Values.server.serviceLabels }}
+      {{ toYaml . | nindent 4 }}
+    {{- end }}
   {{- with .Values.server.serviceAnnotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
