chore(argo-cd): add nodeselector and tolerations to redis-secret-init-job
Signed-off-by: Pavan <borntofight090@gmail.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1662,6 +1662,13 @@ redisSecretInit:
     # -- Automount API credentials for the Service Account
     automountServiceAccountToken: true
 
+  # -- Node selector to be added to the Redis secret-init Job
+  # @default -- `{}` (defaults to global.nodeSelector)
+  nodeSelector: {}
+
+  # -- Tolerations to be added to the Redis secret-init Job
+  # @default -- `[]` (defaults to global.tolerations)
+  tolerations: []
 
 ## Server
 server:
