Make redis secret initialization optional
Signed-off-by: michaelvl <mvl.gh@network42.dk>

--- a/charts/argo-cd/templates/redis-secret-init/job.yaml
+++ b/charts/argo-cd/templates/redis-secret-init/job.yaml
@@ -1,4 +1,4 @@
-{{- if not .Values.externalRedis.host }}
+{{- if and .Values.redisSecretInit.enabled (not .Values.externalRedis.host) }}
 apiVersion: batch/v1
 kind: Job
 metadata:
