--- a/charts/argo-cd/templates/argocd-server/servicemonitor.yaml
+++ b/charts/argo-cd/templates/argocd-server/servicemonitor.yaml
@@ -1,4 +1,4 @@
-{{- if and (or .Values.server.metrics.disableAPICheck (.Capabilities.APIVersions.Has "monitoring.coreos.com/v1")) .Values.server.metrics.enabled .Values.server.metrics.serviceMonitor.enabled }}
+{{- if and (or .Values.server.metrics.serviceMonitor.disableAPICheck (.Capabilities.APIVersions.Has "monitoring.coreos.com/v1")) .Values.server.metrics.enabled .Values.server.metrics.serviceMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
